[package]
name = "shapes2d"
description = "A very simple shape library for working with shapes in 2d space."
version = "0.1.0"
authors = ["Laocoon <laocoon7@gmail.com>"]
homepage = "https://github.com/Laocoon7/shapes2d"
repository = "https://github.com/Laocoon7/shapes2d"
readme = "README.md"
license-file = "LICENSE"
categories = ["games"]
keywords = ["shapes", "2d"]
edition = "2021"

[features]
point = []
ray = []
line = []
triangle = []
rectangle = []
circle = []
# ellipse = []
# mesh = []

default = ["point", "ray", "line", "triangle", "rectangle", "circle"]

[dependencies]
glam = "0.23.0"